# fastapi-dynamodb-template

./: README.md
backend/: pyproject.toml
backend/src/: create_tables.py  create_tables.sh
backend/src/template/: logger.py  main.py  settings.py
backend/src/template/data/: db.py  manage.py
backend/src/template/middleware/: auth.py
backend/src/template/replace_me/: data.py  routes.py
